Fixed truncation of the protocol displayed in the Mockie message style.
Fixes #2014

--- a/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/layout.css
+++ b/Resources/Message Styles/Mockie.AdiumMessageStyle/Contents/Resources/styles/layout.css
@@ -54,6 +54,7 @@ body {
 	padding-right: 4px;
 	right: 0px;
 	margin-bottom: -14px;
+	word-wrap: normal;
 }
 
 .time_initial, .time_consecutive {
